--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?aapgpzb#1" target="_blank">首页</a> | <a href="https://d2jsgnf2snq1t5.cloudfront.net/1?kfilzii" target="_blank">动态网</a> | <a href="https://d19vw3711v9lks.cloudfront.net/2?joratkm" target="_blank">大纪元</a> | <a href="https://dfu0th2rj4x8t.cloudfront.net/4?kmpyvski" target="_blank">看中国</a> | <a href="https://d2tha3bwxphnwp.cloudfront.net/pHh5q?vyybfym" target="_blank">新生网</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/tktpt?ipfciq" target="_blank">阿波罗网</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/Mjpvu?rvcmqkb" target="_blank">干净世界</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/10?snfonl" target="_blank">退党服务</a> | <a href="https://d21y52w6f35pla.cloudfront.net/Rffqf?rltppwi" target="_blank">明慧广播</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/nw9Vn?zgultlbts" target="_blank">传奇时代</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/AF9AG?ohuapa" target="_blank">新境界影视</a> | <a href="https://d2aqxvnyguf0uq.cloudfront.net/zqMQA?trvhrthii" target="_blank">文昭谈论</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/7?uhjqrsezv" target="_blank">明慧</a></p><p><a href="https://dycmgeziwp90b.cloudfront.net/9?lfgacovk" target="_blank">大法</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/3?jovmr" target="_blank">新唐人</a> | <a href="https://dep6yudto3kbo.cloudfront.net/obAhT?djbdelh" target="_blank">人民报</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/xXNHu?pjakyomkq" target="_blank">放光明</a> | <a href="https://d14a0yccee2yym.cloudfront.net/5?mflcmir" target="_blank">新纪元</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/6?qspeotgtx" target="_blank">希望之声</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/11?wsuhz" target="_blank">无界网络</a> | <a href="https://dervszfjn9udk.cloudfront.net/Pueji?ythyh" target="_blank">追查国际</a> | <a href="https://d2oemtubh889hy.cloudfront.net/16?vusazp" target="_blank">明慧之窗</a> | <a href="https://d37g5boc7rm625.cloudfront.net/LdvzZ?rqlxkshta" target="_blank">细语人生</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/fBn3r?zwmdxzuoo" target="_blank">新世纪影视</a> | <a href="https://d23a1u4ljgwmvy.cloudfront.net/PUWMb?iwgrljy" target="_blank">江峰时刻</a> | <a href="https://dgk92ykceobaf.cloudfront.net/8?nnkyuwuh" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?exime#1" target="_blank">首页</a> | <a href="https://d7b58bkqqk9ju.cloudfront.net/1?tmgbenc" target="_blank">动态网</a> | <a href="https://d1vp4chj90rvdj.cloudfront.net/2?ubyqvla" target="_blank">大纪元</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/4?rizbzkj" target="_blank">看中国</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/pHh5q?qtwus" target="_blank">新生网</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/tktpt?vrfkyzb" target="_blank">阿波罗网</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/Mjpvu?qzhlxt" target="_blank">干净世界</a> | <a href="https://d37g5boc7rm625.cloudfront.net/10?qhwnitkjd" target="_blank">退党服务</a> | <a href="https://d1ed4zj8eeit74.cloudfront.net/Rffqf?sgzhd" target="_blank">明慧广播</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/nw9Vn?eivhn" target="_blank">传奇时代</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/AF9AG?hlwwquc" target="_blank">新境界影视</a> | <a href="https://d265ujbtchne9r.cloudfront.net/zqMQA?idkyrffrw" target="_blank">文昭谈论</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/7?zojjichw" target="_blank">明慧</a></p><p><a href="https://dme0bxbvomkno.cloudfront.net/9?dpjsh" target="_blank">大法</a> | <a href="https://d1ff3ajoaf61nd.cloudfront.net/3?fcmhao" target="_blank">新唐人</a> | <a href="https://doh73o6c3dnba.cloudfront.net/obAhT?dxtuns" target="_blank">人民报</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/xXNHu?nbowvqzx" target="_blank">放光明</a> | <a href="https://dol9bue5bysdj.cloudfront.net/5?zpkuxmz" target="_blank">新纪元</a> | <a href="https://d26c5rnrr5nvsd.cloudfront.net/6?gumtrwdtm" target="_blank">希望之声</a> | <a href="https://do0q2uqs2ncwe.cloudfront.net/11?guiqla" target="_blank">无界网络</a> | <a href="https://dep6yudto3kbo.cloudfront.net/Pueji?opfxhqeq" target="_blank">追查国际</a> | <a href="https://d26c5rnrr5nvsd.cloudfront.net/16?neciotuv" target="_blank">明慧之窗</a> | <a href="https://dwpf34pf0p4a8.cloudfront.net/LdvzZ?wihujih" target="_blank">细语人生</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/fBn3r?eeguzlzxb" target="_blank">新世纪影视</a> | <a href="https://d1ucfc2ix2o07u.cloudfront.net/PUWMb?rakedk" target="_blank">江峰时刻</a> | <a href="https://d2fq83y0z2h6n4.cloudfront.net/8?rewnkmy" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652462.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/12/id13459105-GettyImages-1151530724-320x200.jpg"><p align="center">日本军机遭雷达锁定 美国公开批评中共</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652462.md#1" title="日本军机遭雷达锁定 美国公开批评中共""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/12/id13459105-GettyImages-1151530724-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652382.md#1" title="川普：希望看到一个强大的欧洲""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/09/id14585529-GettyImages-2230838238-320x200.webp">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652060.md#1" title="全球首例 澳洲16岁以下未成年人禁用社媒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/05/id13985339-2304300427212124-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651282.md#1" title="前武警逃离中国 曝中共军队思想控制内幕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/12/id14651284-5772cf2db83e8b28e56c158eaae2d6a8-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652537.md#1">在圣诞佳节 留意让你家小狗感到不安的迹象</a><br>
-:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652524.md#1">台湾查获黑帮设公司跨国洗钱2亿美元</a><br>
+:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652521.md#1">《富爸爸》作者：共产主义渗透是经济失序根源</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652537.md#1">在圣诞佳节 留意让你家小狗感到不安的迹象</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652524.md#1">台湾查获黑帮设公司跨国洗钱2亿美元</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652536.md#1">湖北疫苗受害者长期遭打压 身心疲惫</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652432.md#1">中共国防通信光缆被挖断 通信中断143分钟</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652455.md#1">小红书今年涉诈案756件 台警方揭诈骗手法</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652460.md#1">台湾禁小红书 专家：存资安疑虑且成洗脑工具</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652460.md#1">台湾禁小红书 专家：存资安疑虑且成洗脑工具</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652426.md#1">英制裁两中企 指其对全球发动无差别网攻</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652381.md#1">大陆书店现关店潮 台版书成网路高价抢手货</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652462.md#1">日本军机遭雷达锁定 美国公开批评中共</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652390.md#1">中共军事骚扰日韩 赖清德：反对破坏区域和平</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651056.md#1">汪洋大秘毕井泉被双开 曾因问题疫苗“背锅”</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650813.md#1">中共多名高官提前下台 疑与“裸官”有关</a><br>
@@ -108,13 +108,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646847.md#1">【百年真相】卧底30年 冀朝鼎祸乱民国经济</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646878.md#1">德州对Shein展开劳工和产品安全调查</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646682.md#1">比亚迪净利暴跌 中国新能源车业由盛转衰</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3trj59euja9wz.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3trj59euja9wz.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d3trj59euja9wz.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,001</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3kaxrgqgh2ag9.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d3kaxrgqgh2ag9.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,001</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 455,505,726 人
+!共 455,506,781 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652040.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/07/10-xie-yanyi-and-yuan-shanshan-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652040.md#1">中国人权律师谢燕益起诉“国铁”侵犯隐私权</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651896.md#1">高瑜因香港大火批港府 遭大陆警察上门做笔录</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651628.md#1">重庆访民报警反被抓 群众阻拦 警察最终放人</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651574.md#1">四川徐欣蕊被关精神病院案 官方报告惹质疑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650834.md#1">四川公民吉腾富参加宪法交流被拘留8天</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650444.md#1">四年前遭镇长约谈后被抓 重庆访民危文元出狱</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652431.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/08/GettyImages-503773118-600x400-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652431.md#1">大陆多地公务员被要求补缴三年的社保欠款</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652196.md#1">中国传统制造业出口全面下滑 企业加速外迁</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652022.md#1">大陆券商“保代”突击入股 被量刑10年 引关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651978.md#1">福特和雷诺联手 抵御廉价中国车涌入欧洲</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651814.md#1">A股普跌 沪深两市单日缩量1327亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651693.md#1">分析：中共“以邻为壑”贸易模式能走多远</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652455.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/12/id14649462-251205045201100311-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652455.md#1">小红书今年涉诈案756件 台警方揭诈骗手法</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652390.md#1">中共军事骚扰日韩 赖清德：反对破坏区域和平</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652172.md#1">FCC或切断中国三大电信企业与美电话网转接</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651653.md#1">百岁高官王丙&#20094;去世 中共高层特权惹议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652028.md#1">美军开发小型精炼厂 用以生产关键矿物</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651917.md#1">国际人权日 台政院吁回顾历史 避免悲剧重演</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652292.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/12/id14652309-FotoJet-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652292.md#1">呼和浩特一烧烤店深夜起火 整座楼被大火包裹</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652278.md#1">唐山今日凌晨发生2.3级地震 引发关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651228.md#1">株洲哈啰自动驾驶出租车撞人 伤者送ICU</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650783.md#1">一名中国女游客在马来西亚酒店坠亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650377.md#1">河南三门峡一项目工程施工中塌方 5人遇难</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652536.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/12/id14652542-page-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652536.md#1">湖北疫苗受害者长期遭打压 身心疲惫</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652426.md#1">英制裁两中企 指其对全球发动无差别网攻</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652433.md#1">辽宁一幼儿园15天虐童上千次 家长发声</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652161.md#1">中共当局下令停产水银体温计 产品脱销</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652087.md#1">深圳客户山姆会员店买麻薯 盒中出现活老鼠</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651828.md#1">深圳消费者从山姆店网购麻薯 盒内惊现活老鼠</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648814.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/10/id14610627-800024-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648814.md#1">淘宝、支付宝、闲鱼同步崩溃 客服大排队</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648090.md#1">中国朱雀三号火箭回收试验失败 发生异常燃烧</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644041.md#1">新唐人油画大赛参赛人数和作品质量创新高</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642233.md#1">中国知名婴童品牌被检出细菌超标48倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641253.md#1">辽宁11岁男孩摆摊 知情人：6岁已辍学照顾病父</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639637.md#1">中国2026届大学毕业生人数再创新高 预计1270万</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/11/13/n14635481.md#1">【独家】中共国家安全部第十局起底</a><br>
